fixed the contect alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-login,
-footer {
-  scroll-behavior: auto;
-}
 .titleBar {
   height: 60px;
   position: sticky;
@@ -28,7 +24,7 @@ footer {
   width: 18%;
 }
 .footer {
-  height: 634px;
+  height: 661px;
   width: 100%;
   background-color: #000;
   display: block;
@@ -38,7 +34,7 @@ footer {
   max-width: 100%;
   text-transform: uppercase;
   font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
-  position: absolute;
+  position: relative;
   z-index: 1;
 }
 .row {
@@ -84,12 +80,20 @@ svg {
   margin-right: 15px;
 }
 .body {
-  margin-left: 15%;
-  padding: 40px 16px;
-  height: 1000px;
+  padding-top: 100%;
+  padding-left: 100px;
+  margin-left: 100px;
   position: relative;
+  width: 100%;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
 }
-ul.login {
+.page {
+  margin-top: 2%;
+  margin-left: 210px;
+  width: 80%;
+}
+ul.rightsidebar {
   list-style-type: none;
   margin-top: 2px;
   padding: 0px;
@@ -110,7 +114,7 @@ li a {
   width: 100%;
 }
 
-li a.loginactive {
+li a.rightsidebaractive {
   background-color: #ce1c17;
   color: white;
 }
@@ -153,21 +157,18 @@ p.socialMedia {
 }
 .opHrs {
   margin-top: 4%;
-  margin-bottom: 1%;
   font: bold;
 }
 .opTime {
   font-size: 14px;
   font-weight: bold;
-  margin-top: 0;
   margin-left: 12%;
   margin-bottom: 0%;
 }
 .opTimes {
   font-size: 14px;
-  margin-top: 0;
   margin-left: 16%;
-  margin-bottom: 3%;
+  margin-bottom: 4%;
 }
 @media screen and (max-width: 500px) {
   .titleBar {
